--- a/back-office/templates/category/_form.html.twig
+++ b/back-office/templates/category/_form.html.twig
@@ -9,6 +9,6 @@
     </div>
 
 
-    <button class="mt-3 col-7 mx-auto btn btn-success">Enregistrer</button>
+    <button class="mt-3 col-12 col-sm-7 mx-auto btn btn-success">Enregistrer</button>
 
 {{ form_end(form) }}
