--- a/back-office/templates/refresh_token/index.html.twig
+++ b/back-office/templates/refresh_token/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}RefreshToken index{% endblock %}
+{% block title %}Tokens{% endblock %}
 {% block stylesheets %} {{ parent() }} {{ encore_entry_link_tags('refreshToken') }}{% endblock %}
 
 {% block body %}
-    <h1 class="title-page">Token</h1>
+    <h1 class="title-page">Tokens</h1>
     <table class="table table-entity mt-3">
         <thead>
             <tr>
