--- a/back-office/assets/styles/app.scss
+++ b/back-office/assets/styles/app.scss
@@ -19,14 +19,23 @@ body {
   textarea{
     background-color: lightskyblue;
   }
-}
 
+  div {
+    word-wrap: break-word;
+  }
+}
 
 #content-body {
   float: right;
   width: calc(100% - 100px);
   padding: 30px;
   height: 100%;
+  overflow: auto;
+  margin-top: 40px;
+
+  @media (max-width: 576px) {
+    width: 100%;
+  }
 }
 
 .table-entity {
@@ -50,7 +59,10 @@ body {
 .pagination {
   height: 50px;
   margin: 0 auto;
-  width: max-content;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
   span {
     display: block;
     width: 50px;
@@ -79,7 +91,7 @@ body {
   text-transform: uppercase;
   color: #007bff;
   margin: 0 auto;
-  width: max-content;
+  text-align: center;
 }
 
 .div-edit {
@@ -89,6 +101,9 @@ body {
   }
   td  {
     border-top: transparent 0px;
+  }
+  textarea {
+    min-height: 100px;
   }
 }
 
