--- a/back-office/templates/category/_delete_form.html.twig
+++ b/back-office/templates/category/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form class="d-flex " method="post" action="{{ path('category_delete', {'id': category.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
-    <button class="mt-3 col-7 mx-auto btn btn-danger mx-auto">Delete</button>
+    <button class="mt-3 col-12 col-sm-7 mx-auto btn btn-danger mx-auto">Delete</button>
 </form>
