--- a/back-office/templates/category/edit.html.twig
+++ b/back-office/templates/category/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1 class="title-page">Modifier une catégorie</h1>
 
-    <a class="btn btn-primary" href="{{ path('category_index') }}">Retour à la liste</a>
+    <a class="btn btn-primary mt-3" href="{{ path('category_index') }}">Retour à la liste</a>
     <div class="div-edit col-xl-4 col-md-8 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
 
         {{ include('category/_form.html.twig') }}
