--- a/back-office/templates/category/show.html.twig
+++ b/back-office/templates/category/show.html.twig
@@ -1,29 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Category{% endblock %}
+{% block title %}Visualiser une catégorie{% endblock %}
 
 {% block body %}
-    <h1 class="title-page">Catégorie</h1>
-    <a class="btn btn-primary" href="{{ path('category_index') }}">Retour à la liste</a>
+    <h1 class="title-page">Visualiser une catégorie</h1>
+    <a class="btn btn-primary mt-3" href="{{ path('category_index') }}">Retour à la liste</a>
     <div class="div-edit col-xl-4 col-md-8 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
-    <table class="table">
-            <tbody>
-            <tr>
-                <th>Id</th>
+    <div class="table text-center">
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Id</div>
                 <td>{{ category.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
+            </div>
+            <div  class="d-flex flex-column mb-3">
+                <div  class="font-weight-bolder">Name</div>
                 <td>{{ category.name }}</td>
-            </tr>
-            <tr>
-                <th>Label</th>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Label</div>
                 <td>{{ category.label }}</td>
-            </tr>
-            </tbody>
-        </table>
+            </div>
+        </div>
         <div class="d-flex">
-            <a class="mt-3 col-7 mx-auto btn btn-success" href="{{ path('category_edit', {'id': category.id}) }}">Modifier</a>
+            <a class="mt-3 col-12 col-sm-7 mx-auto btn btn-success" href="{{ path('category_edit', {'id': category.id}) }}">Modifier</a>
 
         </div>
 
