--- a/back-office/templates/include/sidebar.html.twig
+++ b/back-office/templates/include/sidebar.html.twig
@@ -5,6 +5,58 @@
             <img class="logo-img" src="/media/leQuizlogo.svg">
         </a>
     </div>
+    <div class="icon-menu">
+        <i class="fas fa-bars"></i>
+    </div>
+    <div class="small-menu">
+        <ul>
+            <li id="sidebar-home" class="nav-items">
+                <a href="{{ path('home') }}">
+                    <i class="fas fa-home"></i>
+                    <p>Dashboard</p>
+                </a>
+            </li>
+            <li id="sidebar-category" class="nav-items">
+                <a href="{{ path('category_index') }}">
+                    <i class="fas fa-tag"></i>
+                    <p>Categories</p>
+                </a>
+            </li>
+            <li id="sidebar-question" class="nav-items">
+                <a href="{{ path('question_index') }}">
+                    <i class="fas fa-question"></i>
+                    <p>Questions</p>
+                </a>
+            </li>
+            <li id="sidebar-question-type" class="nav-items">
+                <a href="{{ path('question_type_index') }}">
+                    <i class="fas fa-question-circle"></i>
+                    <p>Question Types</p>
+                </a>
+            </li>
+            <li id="sidebar-user" class="nav-items">
+                <a href="{{ path('user_index') }}">
+                    <i class="fas fa-user"></i>
+                    <p>Utilisateurs</p>
+                </a>
+            </li>
+            <li id="sidebar-token" class="nav-items">
+                <a href="{{ path('refresh_token_index') }}">
+                    <i class="fas fa-coins"></i>
+                    <p>Token</p>
+                </a>
+            </li>
+            <li id="sidebar-logout" class="nav-items">
+                <a href="{{ path('app_logout') }}">
+                    <i class="fas fa-sign-out-alt"></i>
+                    <p>Déconnexion</p>
+                </a>
+            </li>
+            <li  class="nav-version">
+                <p>Version 0.1.1</p>
+            </li>
+        </ul>
+    </div>
     <div class="sidebar-wrapper">
         <nav class="nav-cont">
             <ul class="nav">
