--- a/back-office/templates/question/edit.html.twig
+++ b/back-office/templates/question/edit.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
     <h1 class="title-page">Modifier une question</h1>
     <a class="btn btn-primary mt-3" href="{{ path('question_index') }}">Retour à la liste</a>
-    <div class="div-edit col-xl-7 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
+    <div class="div-edit col-xl-7 col-12  mx-auto rounded shadow-lg mt-5 p-sm-5 py-5 d-flex flex-column justify-content-center">
 
         <form class="edit-question" action='{{ path('question_edit', {id: question.id}) }}' method="post">
             <label class="label-fs col-12" for="question-content">Question </label>
@@ -99,7 +99,7 @@
             {#        {% endif %}#}
             <input type="hidden" name="token" value="{{ csrf_token('question_edit_token') }}"/>
             <div class="d-flex">
-                <button class="mt-3 col-7 mx-auto btn btn-success" type="submit">Enregistrer</button>
+                <button class="mt-3 col-12 col-sm-7 mx-auto btn btn-success" type="submit">Enregistrer</button>
             </div>
         </form>
         {{ include('question/_delete_form.html.twig') }}
