--- a/back-office/templates/question/new.html.twig
+++ b/back-office/templates/question/new.html.twig
@@ -5,8 +5,8 @@
 
 {% block body %}
     <h1 class="title-page">Ajouter une question</h1>
-    <a class="btn btn-primary mt-3" href="{{ path('question_index') }}">Retour à la liste</a>
-    <div class="div-edit col-xl-7 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
+    <a class="btn btn-primary mt-3 mt-3" href="{{ path('question_index') }}">Retour à la liste</a>
+    <div class="div-edit col-xl-7 col-12  mx-auto rounded shadow-lg mt-5 py-5 p-sm-5 d-flex flex-column justify-content-center">
         <form class="edit-question" action='{{ path('question_new', {id: question.id}) }}' method="post">
             <label class="label-fs col-12" for="question-content">Question :</label>
             <textarea class="col-12 col-xl-9 mx-auto rounded mb-3" id="question-content" name="question-content"
@@ -89,7 +89,7 @@
             {#        {% endif %}#}
             <input type="hidden" name="token" value="{{ csrf_token('question_new_token') }}"/>
             <div class="d-flex">
-                <button class="mt-3 col-7 mx-auto btn btn-success" type="submit">Enregistrer</button>
+                <button class="mt-3 col-12 col-sm-7 mx-auto btn btn-success" type="submit">Enregistrer</button>
             </div>
         </form>
 
