--- a/back-office/templates/question/show.html.twig
+++ b/back-office/templates/question/show.html.twig
@@ -1,120 +1,117 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Question{% endblock %}
+{% block title %}Visualiser une question{% endblock %}
 
 {% block body %}
-    <h1 class="title-page">Question</h1>
+    <h1 class="title-page">Visualiser une question</h1>
     <a class="btn btn-primary mt-3" href="{{ path('question_index') }}">Retour à la liste</a>
-    <div class="div-edit col-xl-7 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
+    <div class="div-edit col-xl-7 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column mb-3 justify-content-center">
 
-        <table class="table">
-            <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ question.id }}</td>
-            </tr>
-            <tr>
-                <th>Type</th>
-                <td>{% for type in question.types %}
+        <div class="table text-center">
+            <div class=" d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Id</div>
+                <div>{{ question.id }}</div>
+            </div>
+            <div class=" d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Type</div>
+                <div>{% for type in question.types %}
                         {{ type }}
                     {% endfor %}
-                </td>
-            </tr>
-            <tr>
-                <th>Difficulty</th>
-                <td>{{ question.difficulty }}</td>
-            </tr>
-            <tr>
-                <th>Content</th>
-                <td>{{ question.content }}</td>
-            </tr>
-            <tr>
-                <th>Answer</th>
+                </div>
+            </div>
+            <div class=" d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Difficulty</div>
+                <div>{{ question.difficulty }}</div>
+            </div>
+            <div class=" d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Content</div>
+                <div>{{ question.content }}</div>
+            </div>
+            <div class=" d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Answer</div>
                 {#                <td>{{ question.answer ? question.answer|json_encode : '' }}</td>#}
-                <td>
-                    <table>
+                <div class="mt-3">
+                    <div>
                         {% for key, field in question.answer %}
                             {% if key == 'answers' %}
-                                <tr>
-                                    <th>answers</th>
-                                    <td>
-                                        <table>
-                                            {% for answer in field %}
-                                                <tr>
-                                                    {% for key, answerField in answer %}
-                                                        <td>
+                                <div class=" d-flex flex-column mb-3">
+                                    <div>
+                                        <div>
+                                            {% for answers in field %}
+                                                <div class=" d-flex flex-column mb-3">
+                                                    {% for key, answerField in answers %}
+                                                        <div>
                                                             {% if key == 'content' %}
-                                                                {{ answerField }}
+                                                                <div>{{ answerField }}</div>
                                                             {% elseif key == 'is_good_answer' and answerField %}
                                                                 (Bonne réponse)
                                                             {% endif %}
-                                                        </td>
+                                                        </div>
                                                     {% endfor %}
-                                                </tr>
+                                                </div>
                                             {% endfor %}
-                                        </table>
-                                    </td>
-                                </tr>
+                                        </div>
+                                    </div>
+                                </div>
                             {% elseif key == 'additional' %}
-                                <tr>
-                                    <th>additional</th>
-                                    <td>
-                                        <table>
+                                <div class=" d-flex flex-column mb-3">
+                                    <div>additional</div>
+                                    <div>
+                                        <div>
                                             {% for additional in field %}
                                                 {% for key, additionalField in additional %}
-                                                    <tr>
-                                                        <td>
+                                                    <div class=" d-flex flex-column mb-3">
+                                                        <div>
                                                             {{ key }} : {{ additionalField }}
-                                                        </td>
-                                                    </tr>
+                                                        </div>
+                                                    </div>
                                                 {% endfor %}
                                             {% endfor %}
-                                        </table>
-                                    </td>
-                                </tr>
+                                        </div>
+                                    </div>
+                                </div>
                             {% endif %}
                         {% endfor %}
-                    </table>
-                </td>
-            </tr>
-            <tr>
-                <th>Status</th>
-                <td>{{ question.status }}</td>
-            </tr>
-            <tr>
-                <th>Media</th>
+                    </div>
+                </div>
+            </div>
+            <div class=" d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Status</div>
+                <div>{{ question.status }}</div>
+            </div>
+            <div class=" d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Media</div>
                 {#                <td>{{ question.media ? question.media|json_encode : '' }}</td>#}
-                <td>
-                    <table>
+                <div>
+                    <div>
                         {% for key, field in question.media %}
-                            <tr>
-                                <th>{{ key }} </th>
+                            <div class=" d-flex flex-column mb-3">
+                                <div>{{ key }} </div>
                                 <td>{{ field }}</td>
-                            </tr>
+                            </div>
                         {% endfor %}
-                    </table>
-                </td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
-                <td>{{ question.createdAt ? question.createdAt|date('Y-m-d H:i:s T') : '' }}</td>
-            </tr>
-            <tr>
-                <th>UpdatedAt</th>
-                <td>{{ question.updatedAt ? question.updatedAt|date('Y-m-d H:i:s T') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Categories</th>
-                <td>
+                    </div>
+                </div>
+            </div>
+            <div class=" d-flex flex-column mb-3">
+                <div class="font-weight-bolder">CreatedAt</div>
+                <div>{{ question.createdAt ? question.createdAt|date('Y-m-d H:i:s T') : '' }}</div>
+            </div>
+            <div class=" d-flex flex-column mb-3">
+                <div class="font-weight-bolder">UpdatedAt</div>
+                <div>{{ question.updatedAt ? question.updatedAt|date('Y-m-d H:i:s T') : '' }}</div>
+            </div>
+            <div class=" d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Categories</div>
+                <div class="d-flex flex-column">
                     {% for category in question.categories %}
-                        {{ category }}
+                        <div>{{ category }}</div>
                     {% endfor %}
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                </div>
+            </div>
+        </div>
         <div class="d-flex">
-            <a class="mt-3 col-7 mx-auto btn btn-success" href="{{ path('question_edit', {'id': question.id}) }}">Modifier</a>
+            <a class="mt-3 col-12 col-sm-7 mx-auto btn btn-success" href="{{ path('question_edit', {'id': question.id}) }}">Modifier</a>
         </div>
 
         {{ include('question/_delete_form.html.twig') }}
