--- a/back-office/templates/question_type/_form.html.twig
+++ b/back-office/templates/question_type/_form.html.twig
@@ -11,5 +11,5 @@
     {{ form_label(form.ischild, 'Categorie enfant', {'label_attr': {'class': 'mt-3'}}) }}
     {{ form_widget(form.ischild )}}
 </div>
-<button class="mt-3 col-7 mx-auto btn btn-success">Enregistrer</button>
+<button class="mt-3 col-12 col-sm-7 mx-auto btn btn-success">Enregistrer</button>
 {{ form_end(form) }}
