--- a/back-office/templates/question_type/new.html.twig
+++ b/back-office/templates/question_type/new.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
     <h1 class="title-page">Ajouter un type de question</h1>
-    <a class="btn btn-primary" href="{{ path('question_type_index') }}">retour à la liste</a>
+    <a class="btn btn-primary mt-3" href="{{ path('question_type_index') }}">retour à la liste</a>
     <div class="div-edit col-xl-4 col-md-8 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
         {{ include('question_type/_form.html.twig') }}
     </div>
