--- a/back-office/templates/question_type/show.html.twig
+++ b/back-office/templates/question_type/show.html.twig
@@ -1,41 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}QuestionType{% endblock %}
+{% block title %}Visualiser un type de question{% endblock %}
 
 {% block body %}
-    <h1 class="title-page">QuestionType</h1>
-    <a class="btn btn-primary" href="{{ path('question_type_index') }}">Retour à la liste</a>
+    <h1 class="title-page">Visualiser un type de question</h1>
+    <a class="btn btn-primary mt-3" href="{{ path('question_type_index') }}">Retour à la liste</a>
     <div class="div-edit col-xl-4 col-md-8 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
-        <table class="table">
-            <tbody>
-            <tr>
-                <th>Id</th>
+        <div class="table text-center">
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Id</div>
                 <td>{{ question_type.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div  class="font-weight-bolder">Name</div>
                 <td>{{ question_type.name }}</td>
-            </tr>
-            <tr>
-                <th>Label</th>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div  class="font-weight-bolder">Label</div>
                 <td>{{ question_type.label }}</td>
-            </tr>
-            <tr>
-                <th>Ischild</th>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Ischild</div>
                 <td>{{ question_type.ischild ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">CreatedAt</div>
                 <td>{{ question_type.createdAt ? question_type.createdAt|date('Y-m-d H:i:s T') : '' }}</td>
-            </tr>
-            <tr>
-                <th>UpdatedAt</th>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">UpdatedAt</div>
                 <td>{{ question_type.updatedAt ? question_type.updatedAt|date('Y-m-d H:i:s T') : '' }}</td>
-            </tr>
-            </tbody>
-        </table>
+            </div>
+        </div>
         <div class="d-flex">
-            <a class="mt-3 col-7 mx-auto btn btn-success"
+            <a class="mt-3 col-12 col-sm-7 mx-auto btn btn-success"
                href="{{ path('question_type_edit', {'id': question_type.id}) }}">Modifier</a>
         </div>
         {{ include('question_type/_delete_form.html.twig') }}
