--- a/back-office/templates/refresh_token/_delete_form.html.twig
+++ b/back-office/templates/refresh_token/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form class="d-flex" method="post" action="{{ path('refresh_token_delete', {'token': refresh_token.token}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ refresh_token.token) }}">
-    <button class="mt-3 col-7 mx-auto btn btn-danger mx-auto">Supprimer</button>
+    <button class="mt-3 col-12 col-sm-7 mx-auto btn btn-danger mx-auto">Supprimer</button>
 </form>
