--- a/back-office/templates/user/_form.html.twig
+++ b/back-office/templates/user/_form.html.twig
@@ -14,20 +14,20 @@
     </div>
 {% endif %}
 <div class="d-flex flex-wrap mt-3">
-    {{ form_label(form.plan, 'Plan', {'label_attr': {'class': 'col-4 label-fs'}}) }}
-    {{ form_widget(form.plan, {'attr': {'class': 'text-center col-4'}}) }}
+    {{ form_label(form.plan, 'Plan', {'label_attr': {'class': 'col-5 label-fs'}}) }}
+    {{ form_widget(form.plan, {'attr': {'class': 'text-center col-7'}}) }}
 </div>
 <div class="d-flex flex-wrap mt-3">
-    {{ form_label(form.role, 'Rôle', {'label_attr': {'class': 'col-4 label-fs'}}) }}
-    {{ form_widget(form.role, {'attr': {'class': 'text-center col-4'}}) }}
+    {{ form_label(form.role, 'Rôle', {'label_attr': {'class': 'col-5 label-fs'}}) }}
+    {{ form_widget(form.role, {'attr': {'class': 'text-center col-7'}}) }}
 </div>
-<div class="d-flex col-12">
-    <div class="d-flex flex-wrap mt-3 col-4 pl-0">
-        {{ form_label(form.isTrustyWriter, 'Certifié', {'label_attr': {'class': 'pr-3 label-fs'}}) }}
+<div class="d-flex flex-wrap col-12 p-0">
+    <div class="d-flex flex-wrap mt-3 col-12 col-sm-6 pl-0">
+        {{ form_label(form.isTrustyWriter, 'Certifié', {'label_attr': {'class': 'col-8 pr-3 label-fs'}}) }}
         {{ form_widget(form.isTrustyWriter) }}
     </div>
-    <div class="d-flex flex-wrap mt-3 col-4">
-        {{ form_label(form.isActive, 'Actif', {'label_attr': {'class': 'px-3 label-fs'}}) }}
+    <div class="d-flex flex-wrap mt-3 pl-0 col-12 col-sm-6">
+        {{ form_label(form.isActive, 'Actif', {'label_attr': {'class': 'col-8 pr-3 label-fs'}}) }}
         {{ form_widget(form.isActive) }}
     </div>
     {% if action is same as('edit') %}
@@ -44,6 +44,6 @@
     </div>
 {% endif %}
 <div class="d-flex">
-    <button class="mt-3 col-7 mx-auto btn btn-success" type="submit">Enregistrer</button>
+    <button class="mt-3 col-12 col-sm-7 mx-auto btn btn-success" type="submit">Enregistrer</button>
 </div>
 {{ form_end(form) }}
