--- a/back-office/templates/user/edit.html.twig
+++ b/back-office/templates/user/edit.html.twig
@@ -10,7 +10,7 @@
 
     {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
     <div class="d-flex">
-        <button class="mt-3 col-7 mx-auto btn btn-warning">Réinitialiser le mot de passe</button>
+        <button class="mt-3 col-12 col-sm-7 mx-auto btn btn-warning">Réinitialiser le mot de passe</button>
     </div>
     {{ include('user/_delete_form.html.twig') }}
 </div>
