--- a/back-office/templates/user/index.html.twig
+++ b/back-office/templates/user/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %}Utilisateurs{% endblock %}
 
 {% block body %}
-    <h1 class="title-page">User</h1>
+    <h1 class="title-page">Utilisateurs</h1>
 
     <table class="table table-entity mt-3">
         <thead>
@@ -62,5 +62,5 @@
         </tbody>
     </table>
 
-    <a class="btn btn-primary" href="{{ path('user_new') }}">+ Ajouter</a>
+    <a class="btn btn-primary mt-4" href="{{ path('user_new') }}">+ Ajouter</a>
 {% endblock %}
