--- a/back-office/templates/user/show.html.twig
+++ b/back-office/templates/user/show.html.twig
@@ -1,79 +1,77 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}Visualiser un utilisateur{% endblock %}
 
 {% block body %}
-    <h1 class="title-page">QuestionType</h1>
-    <a class="btn btn-primary" href="{{ path('user_index') }}">Retour à la liste</a>
+    <h1 class="title-page">Visualiser un utilisateur</h1>
+    <a class="btn btn-primary mt-3" href="{{ path('user_index') }}">Retour à la liste</a>
     <div class="div-edit col-xl-7 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center ">
 
 
-        <table class="table">
-            <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
-            <tr>
-                <th>Username</th>
-                <td>{{ user.username }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ user.email }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ user.password }}</td>
-            </tr>
-            <tr>
-                <th>PasswordResetToken</th>
-                <td>{{ user.passwordResetToken }}</td>
-            </tr>
-            <tr>
-                <th>LastResetPasswordEmailSendDate</th>
-                <td>{{ user.lastResetPasswordEmailSendDate ? user.lastResetPasswordEmailSendDate|date('Y-m-d H:i:s T') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Plan</th>
-                <td>{{ user.plan }}</td>
-            </tr>
-            <tr>
-                <th>Role</th>
-                <td>{{ user.role }}</td>
-            </tr>
-            <tr>
-                <th>IsTrustyWriter</th>
-                <td>{{ user.isTrustyWriter ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>IsActive</th>
-                <td>{{ user.isActive ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>IsBanned</th>
-                <td>{{ user.isBanned ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>UnbanDate</th>
-                <td>{{ user.unbanDate ? user.unbanDate|date('Y-m-d H:i:s T') : '' }}</td>
-            </tr>
-            <tr>
-                <th>DeletedAt</th>
-                <td>{{ user.deletedAt ? user.deletedAt|date('Y-m-d H:i:s T') : '' }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
-                <td>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s T') : '' }}</td>
-            </tr>
-            <tr>
-                <th>UpdatedAt</th>
-                <td>{{ user.updatedAt ? user.updatedAt|date('Y-m-d H:i:s T') : '' }}</td>
-            </tr>
-            </tbody>
-        </table>
+        <div class="table text-center">
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Id</div>
+                <div>{{ user.id }}</div>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Username</div>
+                <div>{{ user.username }}</div>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Email</div>
+                <div>{{ user.email }}</div>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Password</div>
+                <div>{{ user.password }}</div>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">PasswordResetToken</div>
+                <div>{{ user.passwordResetToken|default('Null') }}</div>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">LastResetPasswordEmailSendDate</div>
+                <div>{{ user.lastResetPasswordEmailSendDate ? user.lastResetPasswordEmailSendDate|date('Y-m-d H:i:s T') : 'Null' }}</div>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Plan</div>
+                <div>{{ user.plan }}</div>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">Role</div>
+                <div>{{ user.role }}</div>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">IsTrustyWriter</div>
+                <div>{{ user.isTrustyWriter ? 'Yes' : 'No' }}</div>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">IsActive</div>
+                <div>{{ user.isActive ? 'Yes' : 'No' }}</div>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">IsBanned</div>
+                <div>{{ user.isBanned ? 'Yes' : 'No' }}</div>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">UnbanDate</div>
+                <div>{{ user.unbanDate ? user.unbanDate|date('Y-m-d H:i:s T') : '' }}</div>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">DeletedAt</div>
+                <div>{{ user.deletedAt ? user.deletedAt|date('Y-m-d H:i:s T') : '' }}</div>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">CreatedAt</div>
+                <div>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s T') : '' }}</div>
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <div class="font-weight-bolder">UpdatedAt</div>
+                <div>{{ user.updatedAt ? user.updatedAt|date('Y-m-d H:i:s T') : '' }}</div>
+            </div>
+        </div>
         <div class="d-flex">
-            <a class="mt-3 col-7 mx-auto btn btn-success" href="{{ path('user_edit', {'id': user.id}) }}">Modifier</a>
+            <a class="mt-3 col-12 col-sm-7 mx-auto btn btn-success" href="{{ path('user_edit', {'id': user.id}) }}">Modifier</a>
         </div>
         {{ include('user/_delete_form.html.twig') }}
     </div>
