btn reset filter

--- a/back-office/assets/styles/question.scss
+++ b/back-office/assets/styles/question.scss
@@ -97,3 +97,7 @@ ul.list-cb li input[type="checkbox"]:focus + label {
 .filters select {
   min-width: 130px;
 }
+
+.div-reset {
+  margin-top: 18px;
+}
