--- a/back-office/templates/question/index.html.twig
+++ b/back-office/templates/question/index.html.twig
@@ -48,7 +48,9 @@
                 <option data-name="disapproved">Désapprouvée</option>
             </select>
         </div>
-
+        <div class="div-reset">
+            <button class="btn btn-primary" id="reset-filtre">Réinitialiser</button>
+        </div>
     </div>
     <table class="table table-entity mt-3">
         <thead>
