--- a/back-office/templates/question/index.html.twig
+++ b/back-office/templates/question/index.html.twig
@@ -118,7 +118,7 @@
             {% endfor %}
             </div>
             </td>
-            <td>{{ question.status }}</td>
+            <td class="status-cell">{{ question.status }}</td>
             {#                <td>{{ question.media ? question.media|json_encode : '' }}</td>#}
             <td>
                 <table>
