--- a/back-office/assets/styles/question_type.scss
+++ b/back-office/assets/styles/question_type.scss
@@ -63,4 +63,16 @@ input:checked + .slider:before {
 input[type=checkbox] {
   height: 0px;
 }
+@media (min-width: 577px) {
+  #sidebar-question-type {
+    & > a {
+      color: #007bff;
+      background-color: #FFFFFF;
+      box-shadow: 0 1px 15px 1px rgba(39, 39, 39, 0.1);
 
+      i {
+        color: #007bff;
+      }
+    }
+  }
+}
