--- a/back-office/templates/category/edit.html.twig
+++ b/back-office/templates/category/edit.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Modifier une catégorie{% endblock %}
+{% block stylesheets %} {{ parent() }} {{ encore_entry_link_tags('category') }} {% endblock %}
 
 {% block body %}
     <h1 class="title-page">Modifier une catégorie</h1>
