--- a/back-office/templates/refresh_token/show.html.twig
+++ b/back-office/templates/refresh_token/show.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Visualiser un token{% endblock %}
+{% block stylesheets %} {{ parent() }} {{ encore_entry_link_tags('refreshToken') }}{% endblock %}
 
 {% block body %}
     <h1 class="title-page">Visualiser un token</h1>
