--- a/back-office/templates/user/index.html.twig
+++ b/back-office/templates/user/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Utilisateurs{% endblock %}
+{% block stylesheets %} {{ parent() }} {{ encore_entry_link_tags('user') }}{% endblock %}
 
 {% block body %}
     <h1 class="title-page">Utilisateurs</h1>
