--- a/back-office/templates/user/show.html.twig
+++ b/back-office/templates/user/show.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Visualiser un utilisateur{% endblock %}
+{% block stylesheets %} {{ parent() }} {{ encore_entry_link_tags('user') }}{% endblock %}
 
 {% block body %}
     <h1 class="title-page">Visualiser un utilisateur</h1>
