--- a/back-office/templates/category/show.html.twig
+++ b/back-office/templates/category/show.html.twig
@@ -6,23 +6,23 @@
 {% block body %}
     <h1 class="title-page">Visualiser une catégorie</h1>
     <a class="btn btn-primary mt-3" href="{{ path('category_index') }}">Retour à la liste</a>
-    <div class="div-edit col-xl-4 col-md-8 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
-    <div class="table text-center">
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Id</div>
+    <div class="div-edit col-xl-4 col-md-8 col-12 rounded mt-5 d-flex flex-column justify-content-center">
+    <div class="table ">
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Id</div>
                 <td>{{ category.id }}</td>
             </div>
-            <div  class="d-flex flex-column mb-3">
-                <div  class="font-weight-bolder">Name</div>
+            <div  class="d-flex  mb-3">
+                <div  class="col-6 col-md-4 font-weight-bolder">Name</div>
                 <td>{{ category.name }}</td>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Label</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Label</div>
                 <td>{{ category.label }}</td>
             </div>
         </div>
         <div class="d-flex">
-            <a class="mt-3 col-12 col-sm-7 mx-auto btn btn-success" href="{{ path('category_edit', {'id': category.id}) }}">Modifier</a>
+            <a class="mt-3 col-12 col-sm-7 mx-auto btn btn-primary" href="{{ path('category_edit', {'id': category.id}) }}">Modifier</a>
 
         </div>
 
