--- a/back-office/templates/question/new.html.twig
+++ b/back-office/templates/question/new.html.twig
@@ -6,10 +6,10 @@
 {% block body %}
     <h1 class="title-page">Ajouter une question</h1>
     <a class="btn btn-primary mt-3 mt-3" href="{{ path('question_index') }}">Retour à la liste</a>
-    <div class="div-edit col-xl-7 col-12  mx-auto rounded shadow-lg mt-5 py-5 p-sm-5 d-flex flex-column justify-content-center">
+    <div class="div-edit col-xl-7 col-12 rounded mt-5 py-5 p-sm-5 d-flex flex-column justify-content-center">
         <form class="edit-question" action='{{ path('question_new', {id: question.id}) }}' method="post">
-            <label class="label-fs col-12" for="question-content">Question :</label>
-            <textarea class="col-12 col-xl-9 mx-auto rounded mb-3" id="question-content" name="question-content"
+            <label class="label-fs" for="question-content">Question</label>
+            <textarea class="col-12 col-xl-9 rounded mb-3" id="question-content" name="question-content"
                       required></textarea>
             <fieldset>
 
@@ -59,8 +59,8 @@
                 {% endfor %}
             </fieldset>
             <div class="mt-3 mb-3 d-flex flex-wrap">
-                <label class="label-fs col-12" for="additional-response_media-info">Information supplémentaire</label>
-                <textarea class="col-12 col-xl-9 mx-auto" name="additional-response_media-info"
+                <label class="label-fs" for="additional-response_media-info">Information supplémentaire</label>
+                <textarea class="col-12 col-xl-9" name="additional-response_media-info"
                           id="additional-response_media-info"
                 ></textarea>
             </div>
@@ -68,20 +68,22 @@
             {#        TODO RESPONSE MEDIA FILE INPUT #}
             {#        </div>#}
             <div class="d-flex flex-wrap">
-                <label class="col-6 label-fs" for="question-difficulty-select">Difficulté</label>
-                <select class="col-6" name="question-difficulty" id="question-difficulty-select">
-                    {% for difficulty in questionDifficulty %}
-                        <option value="{{ difficulty }}">{{ difficulty|capitalize }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="d-flex flex-wrap">
-                <label class="col-6 label-fs " for="question-status-select">Statut</label>
-                <select class="col-6" name="question-status" id="question-status-select">
-                    {% for status in questionStatuses %}
-                        <option value="{{ status }}">{{ status|capitalize }}</option>
-                    {% endfor %}
-                </select>
+                <div class="d-flex flex-column col-6">
+                    <label class="label-fs" for="question-difficulty-select">Difficulté</label>
+                    <select name="question-difficulty" id="question-difficulty-select">
+                        {% for difficulty in questionDifficulty %}
+                            <option value="{{ difficulty }}">{{ difficulty|capitalize }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="d-flex flex-column col-6">
+                    <label class="label-fs " for="question-status-select">Statut</label>
+                    <select name="question-status" id="question-status-select">
+                        {% for status in questionStatuses %}
+                            <option value="{{ status }}">{{ status|capitalize }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
             </div>
             {#        {% if question.customQuiz %}#}
             {#        TODO handling when changing a question Position. The position of the question below and above should move
@@ -89,7 +91,7 @@
             {#        {% endif %}#}
             <input type="hidden" name="token" value="{{ csrf_token('question_new_token') }}"/>
             <div class="d-flex">
-                <button class="mt-3 col-12 col-sm-7 mx-auto btn btn-success" type="submit">Enregistrer</button>
+                <button class="mt-3 col-12 col-sm-7 mx-auto btn btn-primary" type="submit">Enregistrer</button>
             </div>
         </form>
 
