--- a/back-office/templates/question/show.html.twig
+++ b/back-office/templates/question/show.html.twig
@@ -6,46 +6,46 @@
 {% block body %}
     <h1 class="title-page">Visualiser une question</h1>
     <a class="btn btn-primary mt-3" href="{{ path('question_index') }}">Retour à la liste</a>
-    <div class="div-edit col-xl-7 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column mb-3 justify-content-center">
+    <div class="div-edit col-xl-7 col-12 rounded mt-5 d-flex flex-column mb-3 justify-content-center">
 
-        <div class="table text-center">
-            <div class=" d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Id</div>
+        <div class="table ">
+            <div class=" d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Id</div>
                 <div>{{ question.id }}</div>
             </div>
-            <div class=" d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Type</div>
+            <div class=" d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Type</div>
                 <div>{% for type in question.types %}
                         {{ type }}
                     {% endfor %}
                 </div>
             </div>
-            <div class=" d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Difficulty</div>
+            <div class=" d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Difficulty</div>
                 <div>{{ question.difficulty }}</div>
             </div>
-            <div class=" d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Content</div>
+            <div class=" d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Content</div>
                 <div>{{ question.content }}</div>
             </div>
-            <div class=" d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Answer</div>
+            <div class=" d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Answer</div>
                 {#                <td>{{ question.answer ? question.answer|json_encode : '' }}</td>#}
                 <div class="mt-3">
                     <div>
                         {% for key, field in question.answer %}
                             {% if key == 'answers' %}
-                                <div class=" d-flex flex-column mb-3">
+                                <div class=" d-flex  mb-3">
                                     <div>
                                         <div>
                                             {% for answers in field %}
                                                 <div class=" d-flex flex-column mb-3">
                                                     {% for key, answerField in answers %}
-                                                        <div>
+                                                        <div class="mb-3">
                                                             {% if key == 'content' %}
                                                                 <div>{{ answerField }}</div>
                                                             {% elseif key == 'is_good_answer' and answerField %}
-                                                                (Bonne réponse)
+                                                                <div>(Bonne réponse)</div>
                                                             {% endif %}
                                                         </div>
                                                     {% endfor %}
@@ -55,13 +55,13 @@
                                     </div>
                                 </div>
                             {% elseif key == 'additional' %}
-                                <div class=" d-flex flex-column mb-3">
+                                <div class=" d-flex  mb-3">
                                     <div>additional</div>
                                     <div>
                                         <div>
                                             {% for additional in field %}
                                                 {% for key, additionalField in additional %}
-                                                    <div class=" d-flex flex-column mb-3">
+                                                    <div class=" d-flex  mb-3">
                                                         <div>
                                                             {{ key }} : {{ additionalField }}
                                                         </div>
@@ -76,17 +76,17 @@
                     </div>
                 </div>
             </div>
-            <div class=" d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Status</div>
+            <div class=" d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Status</div>
                 <div>{{ question.status }}</div>
             </div>
-            <div class=" d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Media</div>
+            <div class=" d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Media</div>
                 {#                <td>{{ question.media ? question.media|json_encode : '' }}</td>#}
                 <div>
                     <div>
                         {% for key, field in question.media %}
-                            <div class=" d-flex flex-column mb-3">
+                            <div class=" d-flex  mb-3">
                                 <div>{{ key }} </div>
                                 <td>{{ field }}</td>
                             </div>
@@ -94,17 +94,17 @@
                     </div>
                 </div>
             </div>
-            <div class=" d-flex flex-column mb-3">
-                <div class="font-weight-bolder">CreatedAt</div>
+            <div class=" d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">CreatedAt</div>
                 <div>{{ question.createdAt ? question.createdAt|date('Y-m-d H:i:s T') : '' }}</div>
             </div>
-            <div class=" d-flex flex-column mb-3">
-                <div class="font-weight-bolder">UpdatedAt</div>
+            <div class=" d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">UpdatedAt</div>
                 <div>{{ question.updatedAt ? question.updatedAt|date('Y-m-d H:i:s T') : '' }}</div>
             </div>
-            <div class=" d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Categories</div>
-                <div class="d-flex flex-column">
+            <div class=" d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Categories</div>
+                <div class="d-flex ">
                     {% for category in question.categories %}
                         <div>{{ category }}</div>
                     {% endfor %}
