--- a/back-office/templates/question_type/show.html.twig
+++ b/back-office/templates/question_type/show.html.twig
@@ -6,30 +6,30 @@
 {% block body %}
     <h1 class="title-page">Visualiser un type de question</h1>
     <a class="btn btn-primary mt-3" href="{{ path('question_type_index') }}">Retour à la liste</a>
-    <div class="div-edit col-xl-4 col-md-8 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
-        <div class="table text-center">
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Id</div>
+    <div class="div-edit col-xl-4 col-md-8 col-12 rounded  mt-5 d-flex flex-column justify-content-center">
+        <div class="table text-break">
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Id</div>
                 <td>{{ question_type.id }}</td>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div  class="font-weight-bolder">Name</div>
+            <div class="d-flex  mb-3">
+                <div  class="col-6 col-md-4 font-weight-bolder">Name</div>
                 <td>{{ question_type.name }}</td>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div  class="font-weight-bolder">Label</div>
+            <div class="d-flex  mb-3">
+                <div  class="col-6 col-md-4 font-weight-bolder">Label</div>
                 <td>{{ question_type.label }}</td>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Ischild</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Ischild</div>
                 <td>{{ question_type.ischild ? 'Yes' : 'No' }}</td>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">CreatedAt</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">CreatedAt</div>
                 <td>{{ question_type.createdAt ? question_type.createdAt|date('Y-m-d H:i:s T') : '' }}</td>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">UpdatedAt</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">UpdatedAt</div>
                 <td>{{ question_type.updatedAt ? question_type.updatedAt|date('Y-m-d H:i:s T') : '' }}</td>
             </div>
         </div>
