--- a/back-office/templates/refresh_token/show.html.twig
+++ b/back-office/templates/refresh_token/show.html.twig
@@ -6,18 +6,18 @@
 {% block body %}
     <h1 class="title-page">Visualiser un token</h1>
     <a class="btn btn-primary mt-3" href="{{ path('refresh_token_index') }}">retour à la liste</a>
-    <div class="div-edit col-xl-4 col-md-8 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center">
-        <div class="table text-center">
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Token</div>
+    <div class="div-edit col-xl-4 col-md-8 col-12 rounded  mt-5 d-flex flex-column justify-content-center">
+        <div class="table ">
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Token</div>
                 <div>{{ refresh_token.token }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">ExpirationDate</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">ExpirationDate</div>
                 <div>{{ refresh_token.expirationDate ? refresh_token.expirationDate|date('Y-m-d H:i:s T') : '' }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">User</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">User</div>
                 <div>
                     {{ refresh_token.user ? refresh_token.user.username : 'Guest' }}
                 </div>
