--- a/back-office/templates/user/_form.html.twig
+++ b/back-office/templates/user/_form.html.twig
@@ -23,27 +23,27 @@
 </div>
 <div class="d-flex flex-wrap col-12 p-0">
     <div class="d-flex flex-wrap mt-3 col-12 col-sm-6 pl-0">
-        {{ form_label(form.isTrustyWriter, 'Certifié', {'label_attr': {'class': 'col-8 pr-3 label-fs'}}) }}
+        {{ form_label(form.isTrustyWriter, 'Certifié', {'label_attr': {'class': 'px-3 label-fs'}}) }}
         {{ form_widget(form.isTrustyWriter) }}
     </div>
     <div class="d-flex flex-wrap mt-3 pl-0 col-12 col-sm-6">
-        {{ form_label(form.isActive, 'Actif', {'label_attr': {'class': 'col-8 pr-3 label-fs'}}) }}
+        {{ form_label(form.isActive, 'Actif', {'label_attr': {'class': 'px-3 label-fs'}}) }}
         {{ form_widget(form.isActive) }}
     </div>
     {% if action is same as('edit') %}
-        <div class="d-flex flex-wrap mt-3 col-3">
-            {{ form_label(form.isBanned, 'Ban', {'label_attr': {'class': 'px-3 label-fs'}}) }}
+        <div class="d-flex flex-wrap mt-3 col-12 col-sm-6">
+            {{ form_label(form.isBanned, 'Ban', {'label_attr': {'class': 'pr-3 label-fs'}}) }}
             {{ form_widget(form.isBanned) }}
         </div>
     {% endif %}
 </div>
 {% if action is same as('edit') %}
-    <div class="d-flex flex-wrap mt-3">
+    <div class="d-flex flex-wrap mt-3 ">
         {{ form_label(form.unbanDate, 'Date fin ban', {'label_attr': {'class': 'px-3 label-fs'}}) }}
-        {{ form_widget(form.unbanDate) }}
+        {{ form_widget(form.unbanDate, {'attr': {'class': 'div-unban'}}) }}
     </div>
 {% endif %}
 <div class="d-flex">
-    <button class="mt-3 col-12 col-sm-7 mx-auto btn btn-success" type="submit">Enregistrer</button>
+    <button class="mt-3 col-12 col-sm-7 mx-auto btn btn-primary" type="submit">Enregistrer</button>
 </div>
 {{ form_end(form) }}
