--- a/back-office/templates/user/show.html.twig
+++ b/back-office/templates/user/show.html.twig
@@ -6,73 +6,73 @@
 {% block body %}
     <h1 class="title-page">Visualiser un utilisateur</h1>
     <a class="btn btn-primary mt-3" href="{{ path('user_index') }}">Retour à la liste</a>
-    <div class="div-edit col-xl-7 col-12  mx-auto rounded shadow-lg mt-5 p-5 d-flex flex-column justify-content-center ">
+    <div class="div-edit col-xl-7 col-12  rounded mt-5 d-flex flex-column justify-content-center ">
 
 
-        <div class="table text-center">
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Id</div>
+        <div class="table text-break">
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Id</div>
                 <div>{{ user.id }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Username</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Username</div>
                 <div>{{ user.username }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Email</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Email</div>
                 <div>{{ user.email }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Password</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Password</div>
                 <div>{{ user.password }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">PasswordResetToken</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">PasswordResetToken</div>
                 <div>{{ user.passwordResetToken|default('Null') }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">LastResetPasswordEmailSendDate</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">LastResetPasswordEmailSendDate</div>
                 <div>{{ user.lastResetPasswordEmailSendDate ? user.lastResetPasswordEmailSendDate|date('Y-m-d H:i:s T') : 'Null' }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Plan</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Plan</div>
                 <div>{{ user.plan }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">Role</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">Role</div>
                 <div>{{ user.role }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">IsTrustyWriter</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">IsTrustyWriter</div>
                 <div>{{ user.isTrustyWriter ? 'Yes' : 'No' }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">IsActive</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">IsActive</div>
                 <div>{{ user.isActive ? 'Yes' : 'No' }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">IsBanned</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">IsBanned</div>
                 <div>{{ user.isBanned ? 'Yes' : 'No' }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">UnbanDate</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">UnbanDate</div>
                 <div>{{ user.unbanDate ? user.unbanDate|date('Y-m-d H:i:s T') : '' }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">DeletedAt</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">DeletedAt</div>
                 <div>{{ user.deletedAt ? user.deletedAt|date('Y-m-d H:i:s T') : '' }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">CreatedAt</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">CreatedAt</div>
                 <div>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s T') : '' }}</div>
             </div>
-            <div class="d-flex flex-column mb-3">
-                <div class="font-weight-bolder">UpdatedAt</div>
+            <div class="d-flex  mb-3">
+                <div class="col-6 col-md-4 font-weight-bolder">UpdatedAt</div>
                 <div>{{ user.updatedAt ? user.updatedAt|date('Y-m-d H:i:s T') : '' }}</div>
             </div>
         </div>
         <div class="d-flex">
-            <a class="mt-3 col-12 col-sm-7 mx-auto btn btn-success" href="{{ path('user_edit', {'id': user.id}) }}">Modifier</a>
+            <a class="mt-3 col-12 col-sm-7 mx-auto btn btn-primary" href="{{ path('user_edit', {'id': user.id}) }}">Modifier</a>
         </div>
         {{ include('user/_delete_form.html.twig') }}
     </div>
