--- a/back-office/templates/question/edit.html.twig
+++ b/back-office/templates/question/edit.html.twig
@@ -6,18 +6,18 @@
 {% block body %}
     <h1 class="title-page">Modifier une question</h1>
     <a class="btn btn-primary mt-3" href="{{ path('question_index') }}">Retour à la liste</a>
-    <div class="div-edit col-xl-7 col-12 rounded mt-5 p-sm-5 py-5 d-flex flex-column justify-content-center">
+    <div class="div-edit col-xl-7 col-12 rounded p-sm-5 py-5 d-flex flex-column justify-content-center">
 
         <form class="edit-question" action='{{ path('question_edit', {id: question.id}) }}' method="post">
             <label class="label-fs" for="question-content">Question </label>
             <textarea class="col-12 col-xl-9  rounded mb-3" id="question-content" name="question-content"
                       required>{{ question.content }}</textarea>
-            <fieldset>
+            <fieldset class="d-flex flex-column">
                 <label class="label-fs" for="question-type-select mt-3">Type</label>
-                <div class="col-12">
+                <div class="col-12 cb-types">
                     <ul>
                         {% for type in questionTypes %}
-                            <li>
+                            <li class="mx-3">
                                 <input type="radio" id="cbx-type-{{ type.name }}" name="cbx-type-{{ type.name }}"
                                        value="{{ type.name }}" {% if type.name in question.types %} {{ 'checked' }}{% endif %}>
                                 <label for="cbx-type-{{ type.name }}">{{ type|capitalize }}</label>
