Create Twig Extension and Navbar Template

--- a/back-office/templates/base.html.twig
+++ b/back-office/templates/base.html.twig
@@ -9,6 +9,10 @@
         {% block javascripts %}{{ encore_entry_script_tags('app') }}{% endblock %}
     </head>
     <body>
+
+{#    {{ app.request.pathInfo }}#}
+{#    {{ app.request.uri }}#}
+        {{ navbar(app.request.pathInfo) }}
         {% block body %}{% endblock %}
     </body>
 </html>
