--- a/back-office/templates/base.html.twig
+++ b/back-office/templates/base.html.twig
@@ -11,8 +11,6 @@
         <div id="global-container" class="container-fluid">
             <div class="row" style="height: 100%">
                 <div class="col-lg-2 col-md-3 col-4">
-                    {#    {{ app.request.pathInfo }}#}
-                    {#    {{ app.request.uri }}#}
                     {{ navbar(app.request.pathInfo) }}
                 </div>
                 <div class="col-lg-10 col-md-9 col-8 content-wrapper">
@@ -21,7 +19,7 @@
             </div>
         </div>
         <footer>
-            C'est le footer mdr
+            leQuiz.io © 2021
         </footer>
     </body>
 </html>
